🐛 Fixed the alignment of the title and paragraph

--- a/src/styles/specialized-care.scss
+++ b/src/styles/specialized-care.scss
@@ -12,6 +12,7 @@
         color: $primary;
         align-self: center;
         margin: 0px 0px 24px 0px;
+        text-align: center;
     }
 
     .title_h3{
@@ -27,6 +28,7 @@
         color: $primary;
         align-self: center;
         margin: 0px 0px 48px 0px;
+        text-align: center;
     }
 
     .specialty-care__items{
